--- a/html/authentication-register.html
+++ b/html/authentication-register.html
@@ -75,7 +75,7 @@
                       <span
                         class="input-group-text bg-success text-white h-100"
                         id="basic-addon1"
-                        ><i class="ti-user"></i
+                        ><i class="mdi mdi-account fs-4"></i
                       ></span>
                     </div>
                     <input
@@ -93,7 +93,7 @@
                       <span
                         class="input-group-text bg-danger text-white h-100"
                         id="basic-addon1"
-                        ><i class="ti-email"></i
+                        ><i class="mdi mdi-email fs-4"></i
                       ></span>
                     </div>
                     <input
@@ -110,7 +110,7 @@
                       <span
                         class="input-group-text bg-warning text-white h-100"
                         id="basic-addon2"
-                        ><i class="ti-pencil"></i
+                        ><i class="mdi mdi-lock fs-4"></i
                       ></span>
                     </div>
                     <input
@@ -127,7 +127,7 @@
                       <span
                         class="input-group-text bg-info text-white h-100"
                         id="basic-addon2"
-                        ><i class="ti-pencil"></i
+                        ><i class="mdi mdi-lock fs-4"></i
                       ></span>
                     </div>
                     <input
