--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,8 @@
                 <img
                   src="../assets/images/logo-icon.png"
                   alt="homepage"
-                  class="light-logo" width="25"
+                  class="light-logo"
+                  width="25"
                 />
               </b>
               <!--End Logo icon -->
@@ -162,7 +163,7 @@
                 <a
                   class="nav-link waves-effect waves-dark"
                   href="javascript:void(0)"
-                  ><i class="ti-search"></i
+                  ><i class="mdi mdi-magnify fs-4"></i
                 ></a>
                 <form class="app-search position-absolute">
                   <input
@@ -170,7 +171,7 @@
                     class="form-control"
                     placeholder="Search &amp; enter"
                   />
-                  <a class="srh-btn"><i class="ti-close"></i></a>
+                  <a class="srh-btn"><i class="mdi mdi-window-close"></i></a>
                 </form>
               </li>
             </ul>
@@ -233,8 +234,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-success btn-circle"
-                              ><i class="ti-calendar"></i
+                            <span
+                              class="
+                                btn btn-success btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-calendar text-white fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Event today</h5>
@@ -247,8 +254,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-info btn-circle"
-                              ><i class="ti-settings"></i
+                            <span
+                              class="
+                                btn btn-info btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-settings fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Settings</h5>
@@ -261,8 +274,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-primary btn-circle"
-                              ><i class="ti-user"></i
+                            <span
+                              class="
+                                btn btn-primary btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-account fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Pavan kumar</h5>
@@ -275,8 +294,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-danger btn-circle"
-                              ><i class="fa fa-link"></i
+                            <span
+                              class="
+                                btn btn-danger btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-link fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Luanch Admin</h5>
@@ -325,17 +350,18 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-user me-1 ms-1"></i> My Profile</a
+                    ><i class="mdi mdi-account me-1 ms-1"></i> My Profile</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-wallet me-1 ms-1"></i> My Balance</a
+                    ><i class="mdi mdi-wallet me-1 ms-1"></i> My Balance</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-email me-1 ms-1"></i> Inbox</a
+                    ><i class="mdi mdi-email me-1 ms-1"></i> Inbox</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-settings me-1 ms-1"></i> Account Setting</a
+                    ><i class="mdi mdi-settings me-1 ms-1"></i> Account
+                    Setting</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
@@ -777,42 +803,42 @@
                       <div class="row">
                         <div class="col-6">
                           <div class="bg-dark p-10 text-white text-center">
-                            <i class="fa fa-user mb-1 font-16"></i>
+                            <i class="mdi mdi-account fs-3 mb-1 font-16"></i>
                             <h5 class="mb-0 mt-1">2540</h5>
                             <small class="font-light">Total Users</small>
                           </div>
                         </div>
                         <div class="col-6">
                           <div class="bg-dark p-10 text-white text-center">
-                            <i class="fa fa-plus mb-1 font-16"></i>
+                            <i class="mdi mdi-plus fs-3 font-16"></i>
                             <h5 class="mb-0 mt-1">120</h5>
                             <small class="font-light">New Users</small>
                           </div>
                         </div>
                         <div class="col-6 mt-3">
                           <div class="bg-dark p-10 text-white text-center">
-                            <i class="fa fa-cart-plus mb-1 font-16"></i>
+                            <i class="mdi mdi-cart fs-3 mb-1 font-16"></i>
                             <h5 class="mb-0 mt-1">656</h5>
                             <small class="font-light">Total Shop</small>
                           </div>
                         </div>
                         <div class="col-6 mt-3">
                           <div class="bg-dark p-10 text-white text-center">
-                            <i class="fa fa-tag mb-1 font-16"></i>
+                            <i class="mdi mdi-tag fs-3 mb-1 font-16"></i>
                             <h5 class="mb-0 mt-1">9540</h5>
                             <small class="font-light">Total Orders</small>
                           </div>
                         </div>
                         <div class="col-6 mt-3">
                           <div class="bg-dark p-10 text-white text-center">
-                            <i class="fa fa-table mb-1 font-16"></i>
+                            <i class="mdi mdi-table fs-3 mb-1 font-16"></i>
                             <h5 class="mb-0 mt-1">100</h5>
                             <small class="font-light">Pending Orders</small>
                           </div>
                         </div>
                         <div class="col-6 mt-3">
                           <div class="bg-dark p-10 text-white text-center">
-                            <i class="fa fa-globe mb-1 font-16"></i>
+                            <i class="mdi mdi-web fs-3 mb-1 font-16"></i>
                             <h5 class="mb-0 mt-1">8540</h5>
                             <small class="font-light">Online Orders</small>
                           </div>
@@ -1263,7 +1289,7 @@
                 </div>
                 <ul class="list-style-none">
                   <li class="d-flex no-block card-body">
-                    <i class="fa fa-check-circle w-30px mt-1"></i>
+                    <i class="mdi mdi-check-circle fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -1281,7 +1307,7 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-gift w-30px mt-1"></i>
+                    <i class="mdi mdi-gift fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Congratulation Maruti, Happy Birthday</a
@@ -1298,7 +1324,7 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-plus w-30px mt-1"></i>
+                    <i class="mdi mdi-plus fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Maruti is a Responsive Admin theme</a
@@ -1315,7 +1341,7 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-leaf w-30px mt-1"></i>
+                    <i class="mdi mdi-leaf fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Envato approved Maruti Admin template</a
@@ -1332,7 +1358,9 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-question-circle w-30px mt-1"></i>
+                    <i
+                      class="mdi mdi-comment-question-outline fs-4 w-30px mt-1"
+                    ></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0">
                         I am alwayse here if you have any question</a
@@ -1364,10 +1392,7 @@
                       <!--chat Row -->
                       <li class="chat-item">
                         <div class="chat-img">
-                          <img
-                            src="../assets/images/users/1.jpg"
-                            alt="user"
-                          />
+                          <img src="../assets/images/users/1.jpg" alt="user" />
                         </div>
                         <div class="chat-content">
                           <h6 class="font-medium">James Anderson</h6>
@@ -1381,10 +1406,7 @@
                       <!--chat Row -->
                       <li class="chat-item">
                         <div class="chat-img">
-                          <img
-                            src="../assets/images/users/2.jpg"
-                            alt="user"
-                          />
+                          <img src="../assets/images/users/2.jpg" alt="user" />
                         </div>
                         <div class="chat-content">
                           <h6 class="font-medium">Bianca Doe</h6>
@@ -1416,10 +1438,7 @@
                       <!--chat Row -->
                       <li class="chat-item">
                         <div class="chat-img">
-                          <img
-                            src="../assets/images/users/3.jpg"
-                            alt="user"
-                          />
+                          <img src="../assets/images/users/3.jpg" alt="user" />
                         </div>
                         <div class="chat-content">
                           <h6 class="font-medium">Angelina Rhodes</h6>
@@ -1448,7 +1467,7 @@
                       <a
                         class="btn-circle btn-lg btn-cyan float-end text-white"
                         href="javascript:void(0)"
-                        ><i class="fas fa-paper-plane"></i
+                        ><i class="mdi mdi-send fs-3"></i
                       ></a>
                     </div>
                   </div>
@@ -1588,12 +1607,16 @@
                   <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
                       <a
+                        class="d-flex align-items-center"
                         data-toggle="collapse"
                         data-target="#collapseOne"
                         aria-expanded="true"
                         aria-controls="collapseOne"
                       >
-                        <i class="me-1 fa fa-magnet" aria-hidden="true"></i>
+                        <i
+                          class="me-1 mdi mdi-magnet fs-4"
+                          aria-hidden="true"
+                        ></i>
                         <span>Accordion Example 1</span>
                       </a>
                     </h5>
@@ -1623,13 +1646,16 @@
                   <div class="card-header" id="headingTwo">
                     <h5 class="mb-0">
                       <a
-                        class="collapsed"
+                        class="collapsed d-flex align-items-center"
                         data-toggle="collapse"
                         data-target="#collapseTwo"
                         aria-expanded="false"
                         aria-controls="collapseTwo"
                       >
-                        <i class="me-1 fa fa-magnet" aria-hidden="true"></i>
+                        <i
+                          class="me-1 mdi mdi-magnet fs-4"
+                          aria-hidden="true"
+                        ></i>
                         <span>Accordion Example 2</span>
                       </a>
                     </h5>
@@ -1659,13 +1685,16 @@
                   <div class="card-header" id="headingThree">
                     <h5 class="mb-0">
                       <a
-                        class="collapsed"
+                        class="collapsed d-flex align-items-center"
                         data-toggle="collapse"
                         data-target="#collapseThree"
                         aria-expanded="false"
                         aria-controls="collapseThree"
                       >
-                        <i class="me-1 fa fa-magnet" aria-hidden="true"></i>
+                        <i
+                          class="me-1 mdi mdi-magnet fs-4"
+                          aria-hidden="true"
+                        ></i>
                         <span>Accordion Example 3</span>
                       </a>
                     </h5>
@@ -1703,7 +1732,10 @@
                     aria-expanded="true"
                     aria-controls="Toggle-1"
                   >
-                    <i class="seticon fa fa-arrow-right" aria-hidden="true"></i>
+                    <i
+                      class="seticon mdi mdi-arrow-right-bold"
+                      aria-hidden="true"
+                    ></i>
                     <span>Toggle, Open by default</span>
                   </a>
                   <div id="Toggle-1" class="collapse show multi-collapse">
@@ -1721,7 +1753,7 @@
                     aria-expanded="false"
                     aria-controls="Toggle-2"
                   >
-                    <i class="seticon fa fa-times" aria-hidden="true"></i>
+                    <i class="seticon mdi mdi-close" aria-hidden="true"></i>
                     <span>Toggle, Closed by default</span>
                   </a>
                   <div id="Toggle-2" class="multi-collapse collapse" style="">
@@ -1737,7 +1769,7 @@
                     aria-expanded="false"
                     aria-controls="Toggle-3"
                   >
-                    <i class="seticon fa fa-times" aria-hidden="true"></i>
+                    <i class="seticon mdi mdi-close" aria-hidden="true"></i>
                     <span>Toggle, Closed by default</span>
                   </a>
                   <div id="Toggle-3" class="collapse multi-collapse">
