--- a/html/index2.html
+++ b/html/index2.html
@@ -27,10 +27,7 @@
       href="../assets/libs/fullcalendar/dist/fullcalendar.min.css"
       rel="stylesheet"
     />
-    <link
-      href="../assets/extra-libs/calendar/calendar.css"
-      rel="stylesheet"
-    />
+    <link href="../assets/extra-libs/calendar/calendar.css" rel="stylesheet" />
     <link href="../dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -79,7 +76,8 @@
                 <img
                   src="../assets/images/logo-icon.png"
                   alt="homepage"
-                  class="light-logo" width="25"
+                  class="light-logo"
+                  width="25"
                 />
               </b>
               <!--End Logo icon -->
@@ -168,7 +166,7 @@
                 <a
                   class="nav-link waves-effect waves-dark"
                   href="javascript:void(0)"
-                  ><i class="ti-search"></i
+                  ><i class="mdi mdi-magnify fs-4"></i
                 ></a>
                 <form class="app-search position-absolute">
                   <input
@@ -176,7 +174,7 @@
                     class="form-control"
                     placeholder="Search &amp; enter"
                   />
-                  <a class="srh-btn"><i class="ti-close"></i></a>
+                  <a class="srh-btn"><i class="mdi mdi-window-close"></i></a>
                 </form>
               </li>
             </ul>
@@ -239,8 +237,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-success btn-circle"
-                              ><i class="ti-calendar"></i
+                            <span
+                              class="
+                                btn btn-success btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-calendar text-white fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Event today</h5>
@@ -253,8 +257,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-info btn-circle"
-                              ><i class="ti-settings"></i
+                            <span
+                              class="
+                                btn btn-info btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-settings fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Settings</h5>
@@ -267,8 +277,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-primary btn-circle"
-                              ><i class="ti-user"></i
+                            <span
+                              class="
+                                btn btn-primary btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-account fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Pavan kumar</h5>
@@ -281,8 +297,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-danger btn-circle"
-                              ><i class="fa fa-link"></i
+                            <span
+                              class="
+                                btn btn-danger btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-link fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Luanch Admin</h5>
@@ -331,17 +353,18 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-user me-1 ms-1"></i> My Profile</a
+                    ><i class="mdi mdi-account me-1 ms-1"></i> My Profile</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-wallet me-1 ms-1"></i> My Balance</a
+                    ><i class="mdi mdi-wallet me-1 ms-1"></i> My Balance</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-email me-1 ms-1"></i> Inbox</a
+                    ><i class="mdi mdi-email me-1 ms-1"></i> Inbox</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-settings me-1 ms-1"></i> Account Setting</a
+                    ><i class="mdi mdi-settings me-1 ms-1"></i> Account
+                    Setting</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
@@ -1121,7 +1144,7 @@
                 </div>
                 <ul class="list-style-none">
                   <li class="d-flex no-block card-body">
-                    <i class="fa fa-check-circle w-30px mt-1"></i>
+                    <i class="mdi mdi-check-circle fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -1139,7 +1162,7 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-gift w-30px mt-1"></i>
+                    <i class="mdi mdi-gift fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Congratulation Maruti, Happy Birthday</a
@@ -1156,7 +1179,7 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-plus w-30px mt-1"></i>
+                    <i class="mdi mdi-plus fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Maruti is a Responsive Admin theme</a
@@ -1173,7 +1196,7 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-leaf w-30px mt-1"></i>
+                    <i class="mdi mdi-leaf fs-4 w-30px mt-1"></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0"
                         >Envato approved Maruti Admin template</a
@@ -1190,7 +1213,9 @@
                     </div>
                   </li>
                   <li class="d-flex no-block card-body border-top">
-                    <i class="fa fa-question-circle w-30px mt-1"></i>
+                    <i
+                      class="mdi mdi-comment-question-outline fs-4 w-30px mt-1"
+                    ></i>
                     <div>
                       <a href="#" class="mb-0 font-medium p-0">
                         I am alwayse here if you have any question</a
@@ -1269,6 +1294,9 @@
                               data-toggle="modal"
                               data-target="#add-new-event"
                               class="
+                                d-flex
+                                align-items-center
+                                justify-content-center
                                 btn
                                 mt-3
                                 btn-info
@@ -1276,7 +1304,8 @@
                                 waves-effect waves-light
                               "
                             >
-                              <i class="ti-plus"></i> Add New Event
+                              <i class="mdi mdi-plus fs-4 me-1"></i> Add New
+                              Event
                             </a>
                           </div>
                         </div>
