--- a/html/pages-elements.html
+++ b/html/pages-elements.html
@@ -24,10 +24,7 @@
     />
     <!-- Custom CSS -->
     <link href="../dist/css/style.min.css" rel="stylesheet" />
-    <link
-      href="../assets/libs/toastr/build/toastr.min.css"
-      rel="stylesheet"
-    />
+    <link href="../assets/libs/toastr/build/toastr.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -75,7 +72,8 @@
                 <img
                   src="../assets/images/logo-icon.png"
                   alt="homepage"
-                  class="light-logo" width="25"
+                  class="light-logo"
+                  width="25"
                 />
               </b>
               <!--End Logo icon -->
@@ -164,7 +162,7 @@
                 <a
                   class="nav-link waves-effect waves-dark"
                   href="javascript:void(0)"
-                  ><i class="ti-search"></i
+                  ><i class="mdi mdi-magnify fs-4"></i
                 ></a>
                 <form class="app-search position-absolute">
                   <input
@@ -172,7 +170,7 @@
                     class="form-control"
                     placeholder="Search &amp; enter"
                   />
-                  <a class="srh-btn"><i class="ti-close"></i></a>
+                  <a class="srh-btn"><i class="mdi mdi-window-close"></i></a>
                 </form>
               </li>
             </ul>
@@ -235,8 +233,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-success btn-circle"
-                              ><i class="ti-calendar"></i
+                            <span
+                              class="
+                                btn btn-success btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-calendar text-white fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Event today</h5>
@@ -249,8 +253,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-info btn-circle"
-                              ><i class="ti-settings"></i
+                            <span
+                              class="
+                                btn btn-info btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-settings fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Settings</h5>
@@ -263,8 +273,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-primary btn-circle"
-                              ><i class="ti-user"></i
+                            <span
+                              class="
+                                btn btn-primary btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-account fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Pavan kumar</h5>
@@ -277,8 +293,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-danger btn-circle"
-                              ><i class="fa fa-link"></i
+                            <span
+                              class="
+                                btn btn-danger btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-link fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Luanch Admin</h5>
@@ -327,17 +349,18 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-user me-1 ms-1"></i> My Profile</a
+                    ><i class="mdi mdi-account me-1 ms-1"></i> My Profile</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-wallet me-1 ms-1"></i> My Balance</a
+                    ><i class="mdi mdi-wallet me-1 ms-1"></i> My Balance</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-email me-1 ms-1"></i> Inbox</a
+                    ><i class="mdi mdi-email me-1 ms-1"></i> Inbox</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-settings me-1 ms-1"></i> Account Setting</a
+                    ><i class="mdi mdi-settings me-1 ms-1"></i> Account
+                    Setting</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
