--- a/html/authentication-login.html
+++ b/html/authentication-login.html
@@ -79,7 +79,7 @@
                       <span
                         class="input-group-text bg-success text-white h-100"
                         id="basic-addon1"
-                        ><i class="ti-user"></i
+                        ><i class="mdi mdi-account fs-4"></i
                       ></span>
                     </div>
                     <input
@@ -96,7 +96,7 @@
                       <span
                         class="input-group-text bg-warning text-white h-100"
                         id="basic-addon2"
-                        ><i class="ti-pencil"></i
+                        ><i class="mdi mdi-lock fs-4"></i
                       ></span>
                     </div>
                     <input
@@ -119,7 +119,7 @@
                         id="to-recover"
                         type="button"
                       >
-                        <i class="fa fa-lock me-1"></i> Lost password?
+                        <i class="mdi mdi-lock fs-4 me-1"></i> Lost password?
                       </button>
                       <button
                         class="btn btn-success float-end text-white"
@@ -149,7 +149,7 @@
                     <span
                       class="input-group-text bg-danger text-white h-100"
                       id="basic-addon1"
-                      ><i class="ti-email"></i
+                      ><i class="mdi mdi-email fs-4"></i
                     ></span>
                   </div>
                   <input
