--- a/html/tables.html
+++ b/html/tables.html
@@ -80,7 +80,8 @@
                 <img
                   src="../assets/images/logo-icon.png"
                   alt="homepage"
-                  class="light-logo" width="25"
+                  class="light-logo"
+                  width="25"
                 />
               </b>
               <!--End Logo icon -->
@@ -169,7 +170,7 @@
                 <a
                   class="nav-link waves-effect waves-dark"
                   href="javascript:void(0)"
-                  ><i class="ti-search"></i
+                  ><i class="mdi mdi-magnify fs-4"></i
                 ></a>
                 <form class="app-search position-absolute">
                   <input
@@ -177,7 +178,7 @@
                     class="form-control"
                     placeholder="Search &amp; enter"
                   />
-                  <a class="srh-btn"><i class="ti-close"></i></a>
+                  <a class="srh-btn"><i class="mdi mdi-window-close"></i></a>
                 </form>
               </li>
             </ul>
@@ -240,8 +241,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-success btn-circle"
-                              ><i class="ti-calendar"></i
+                            <span
+                              class="
+                                btn btn-success btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-calendar text-white fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Event today</h5>
@@ -254,8 +261,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-info btn-circle"
-                              ><i class="ti-settings"></i
+                            <span
+                              class="
+                                btn btn-info btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-settings fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Settings</h5>
@@ -268,8 +281,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-primary btn-circle"
-                              ><i class="ti-user"></i
+                            <span
+                              class="
+                                btn btn-primary btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-account fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Pavan kumar</h5>
@@ -282,8 +301,14 @@
                         <!-- Message -->
                         <a href="javascript:void(0)" class="link border-top">
                           <div class="d-flex no-block align-items-center p-10">
-                            <span class="btn btn-danger btn-circle"
-                              ><i class="fa fa-link"></i
+                            <span
+                              class="
+                                btn btn-danger btn-circle
+                                d-flex
+                                align-items-center
+                                justify-content-center
+                              "
+                              ><i class="mdi mdi-link fs-4"></i
                             ></span>
                             <div class="ms-2">
                               <h5 class="mb-0">Luanch Admin</h5>
@@ -332,17 +357,18 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-user me-1 ms-1"></i> My Profile</a
+                    ><i class="mdi mdi-account me-1 ms-1"></i> My Profile</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-wallet me-1 ms-1"></i> My Balance</a
+                    ><i class="mdi mdi-wallet me-1 ms-1"></i> My Balance</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-email me-1 ms-1"></i> Inbox</a
+                    ><i class="mdi mdi-email me-1 ms-1"></i> Inbox</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-settings me-1 ms-1"></i> Account Setting</a
+                    ><i class="mdi mdi-settings me-1 ms-1"></i> Account
+                    Setting</a
                   >
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="javascript:void(0)"
